Nonogram Algorithm ver.5 : Update code (delete unnecessary code)

--- a/Nono-Gram.ipynb
+++ b/Nono-Gram.ipynb
@@ -13,12 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func(n,r):\n",
-    "    #print(n,r)\n",
     "    l = []\n",
     "    \n",
     "    if n>r or n <= 0:\n",
@@ -27,7 +26,6 @@
     "    if n == 1:\n",
     "        l.append([r])\n",
     "        return l\n",
-    "    #print(\"#\")\n",
     "    \n",
     "    for i in range(r-1):\n",
     "        for k in func(n-1, r-i-1):\n",
@@ -66,51 +64,45 @@
     "    \n",
     "    \n",
     "def try_solve(nono):\n",
-    "    for row in range(len(nono)):\n",
-    "        ans = all_(len(nono),row_[row])\n",
-    "        nono[row,:][np.where(np.sum(ans, axis = 0) == len(ans))[0]] = 1\n",
-    "    \n",
     "    \n",
     "    PAST_ZERO_SUM = len(np.where(nono == 0)[0]) + len(np.where(nono == 0)[1])\n",
+    "    \n",
     "    while(1):\n",
-    "        for col in range(len(nono[0])):\n",
-    "            ans = all_(len(nono),col_[col])\n",
-    "            nono[:,col][np.where(np.sum(ans, axis = 0) == len(ans))[0]] = 1  \n",
+    "        for j in range(len(nono[0])):\n",
+    "            ans = all_(len(nono),col_[j])\n",
+    "            nono[:,j][np.where(np.sum(ans, axis = 0) == len(ans))[0]] = 1\n",
+    "            \n",
     "            SAVE = []\n",
     "            for slack in ans:\n",
     "                ar_slack = np.array(slack)\n",
-    "                if all(ar_slack[np.where(nono[:,col] == 1)] == 1) and all(ar_slack[np.where(nono[:,col] == -1)] == 0):\n",
+    "                if all(ar_slack[np.where(nono[:,j] == 1)] == 1) and all(ar_slack[np.where(nono[:,j] == -1)] == 0):\n",
     "                    SAVE.append(slack)\n",
     "            AR_SAVE = np.array(SAVE)\n",
-    "            nono[:,col][np.where(np.sum(AR_SAVE, axis = 0) == len(AR_SAVE))] = 1\n",
-    "            nono[:,col][np.where(np.sum(AR_SAVE, axis = 0) == 0)] = -1\n",
+    "            nono[:,j][np.where(np.sum(AR_SAVE, axis = 0) == len(AR_SAVE))] = 1\n",
+    "            nono[:,j][np.where(np.sum(AR_SAVE, axis = 0) == 0)] = -1\n",
+    "            \n",
     "        NOW_ZERO_SUM = len(np.where(nono == 0)[0]) + len(np.where(nono == 0)[1])\n",
     "        \n",
-    "        # 변함이 없으면 break\n",
     "        if PAST_ZERO_SUM == NOW_ZERO_SUM:\n",
     "            break\n",
-    "        # 변함이 있으면 반복\n",
     "        PAST_ZERO_SUM = NOW_ZERO_SUM\n",
     "        \n",
-    "        \n",
-    "        for row in range(len(nono)):\n",
-    "            ans = all_(len(nono),row_[row])\n",
-    "            nono[row,:][np.where(np.sum(ans, axis = 0) == len(ans))[0]] = 1\n",
+    "        for i in range(len(nono)):\n",
+    "            ans = all_(len(nono),row_[i])\n",
+    "            nono[i,:][np.where(np.sum(ans, axis = 0) == len(ans))[0]] = 1\n",
     "            SAVE = []\n",
     "            for slack in ans:\n",
     "                ar_slack = np.array(slack)\n",
-    "                if all(ar_slack[np.where(nono[row,:] == 1)] == 1) and all(ar_slack[np.where(nono[row,:] == -1)] == 0):\n",
+    "                if all(ar_slack[np.where(nono[i,:] == 1)] == 1) and all(ar_slack[np.where(nono[i,:] == -1)] == 0):\n",
     "                    SAVE.append(slack)\n",
     "            AR_SAVE = np.array(SAVE)\n",
-    "            nono[row,:][np.where(np.sum(AR_SAVE, axis = 0) == len(AR_SAVE))] = 1\n",
-    "            nono[row,:][np.where(np.sum(AR_SAVE, axis = 0) == 0)] = -1\n",
+    "            nono[i,:][np.where(np.sum(AR_SAVE, axis = 0) == len(AR_SAVE))] = 1\n",
+    "            nono[i,:][np.where(np.sum(AR_SAVE, axis = 0) == 0)] = -1\n",
     "        NOW_ZERO_SUM = len(np.where(nono == 0)[0]) + len(np.where(nono == 0)[1])\n",
-    "        \n",
     "        if PAST_ZERO_SUM == NOW_ZERO_SUM:\n",
     "            break\n",
     "        PAST_ZERO_SUM = NOW_ZERO_SUM\n",
     "\n",
-    "    # 완성된 부분 정리\n",
     "    for i in range(len(nono)):\n",
     "        if row_[i] == len(np.where(nono[i] == 1)[0]):\n",
     "            ARRAY = nono[i]\n",
@@ -121,12 +113,13 @@
     "            ARRAY = nono[:,j]\n",
     "            ARRAY[ARRAY<=0] = -1\n",
     "            nono[:,j] = ARRAY\n",
-    "    for row in range(len(nono)):\n",
-    "        ans = all_(len(nono),row_[row])\n",
-    "        row_can_(ans,row)\n",
-    "    for col in range(len(nono[0])):\n",
-    "        ans = all_(len(nono),col_[col])\n",
-    "        col_can_(ans,col)\n",
+    "    for i in range(len(nono)):\n",
+    "        ans = all_(len(nono),row_[i])\n",
+    "        row_can_(ans,i)\n",
+    "    for j in range(len(nono[0])):\n",
+    "        ans = all_(len(nono),col_[j])\n",
+    "        col_can_(ans,j)\n",
+    "\n",
     "    return nono\n",
     "\n",
     "\n",
@@ -135,7 +128,7 @@
     "    can = []\n",
     "    for I in ans:\n",
     "        COP = np.array(I)\n",
-    "        COP[COP<=0] = -1        \n",
+    "        COP[COP<=0] = -1\n",
     "        temp = nono[:,i]*COP\n",
     "        if all(temp!=-1):\n",
     "            can.append(I)\n",
@@ -179,7 +172,9 @@
     "def try_error():\n",
     "    global visit, now_visit\n",
     "    visit = [len(DICT[i]) for i in DICT]\n",
+    "\n",
     "    now_visit = [0 for i in range(len(list(DICT.keys())))]\n",
+    "\n",
     "    dfs(0)\n",
     "\n",
     "    \n",
@@ -231,16 +226,15 @@
     "    nono = np.zeros((P[0],P[1]))\n",
     "    row_ = []\n",
     "    col_ = []\n",
-    "    \n",
-    "    for row in range(P[0]):\n",
-    "        row_.append(P[row+2])\n",
-    "    for col in range(P[1]):\n",
-    "        col_.append(P[col+2+P[0]])\n",
+    "\n",
+    "    for i in range(P[0]):\n",
+    "        row_.append(P[i+2])\n",
+    "    for j in range(P[1]):\n",
+    "        col_.append(P[j+2+P[0]])\n",
     "        \n",
-    "    # try solving 알고리즘 기입\n",
-    "    print('try_solve...')\n",
-    "    nono = try_solve(nono)\n",
     "    \n",
+    "    nono = try_solve(nono)\n",
+    "   \n",
     "    while (que):\n",
     "        q = que.get()\n",
     "        if sum(q[1]) == -2:## 큐가 비는 조건\n",
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,14 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "try_solve...\n",
       "XOXOX\n",
       "OOOOO\n",
       "OOOOO\n",
@@ -299,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "0.01598381996154785"
+       "0.005984067916870117"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,14 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "try_solve...\n",
       "OXOXXXXOXO\n",
       "OOOXXXXOOO\n",
       "XOXXXXXXOX\n",
@@ -339,10 +331,10 @@
     {
      "data": {
       "text/plain": [
-       "0.02892470359802246"
+       "0.027927875518798828"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,14 +347,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "try_solve...\n",
       "XXXXXXOOXXOOOOOXXXOO\n",
       "XXXXOOOXOOOOOXXXOOOO\n",
       "XXXOXXOOOOOOOOOOOOOO\n",
@@ -389,10 +380,10 @@
     {
      "data": {
       "text/plain": [
-       "2.786437749862671"
+       "3.1935617923736572"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,14 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "try_solve...\n",
       "OOOOOOOOXOOXXXXXOOOOXXOOO\n",
       "OOOOOOOXXOXXXXXXOXXOOXXOO\n",
       "OOOOOOOXOOXXXXXOOXXXOOXOO\n",
@@ -444,10 +434,10 @@
     {
      "data": {
       "text/plain": [
-       "128.39015436172485"
+       "121.65449929237366"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,14 +450,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "try_solve...\n",
       "XOXOXOXXXXOOXXOOXXXOOXXXO\n",
       "XOXOXOXXXXOXXXXXXXXXXXXOO\n",
       "OOXOOOXXXXOXXXXXXXXXXXOOO\n",
@@ -499,10 +488,10 @@
     {
      "data": {
       "text/plain": [
-       "20.06634521484375"
+       "19.16878890991211"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,14 +573,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "try_solving...\n",
+      "try_error...\n",
       "OX\n",
       "XO\n",
       "---------------------\n",
@@ -603,10 +592,10 @@
     {
      "data": {
       "text/plain": [
-       "0.001996755599975586"
+       "0.001994609832763672"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
