--- a/Nono-Gram.ipynb
+++ b/Nono-Gram.ipynb
@@ -242,6 +242,7 @@
     "        all_LIST = all_(len(nono), col_[q[1][1]])\n",
     "        prob = cc(all_LIST, q[1][1])\n",
     "        input_dict(prob, q[1])\n",
+    "    DICT = dict(sorted(DICT.items(), key = lambda x: len(x[1])))\n",
     "    if len(DICT) == 0:\n",
     "        now_nono()\n",
     "        return \n",
